--- a/Ex01/Ex01/Ex01.csproj
+++ b/Ex01/Ex01/Ex01.csproj
@@ -23,5 +23,8 @@
     <EmbeddedResource Update="Views\CodaDocumentsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\LandingPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
